rhcl-operator/neuralbank-route.yaml
# HTTPRoutes and Gateway in neuralbank-stack (app namespace).
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: neuralbank-api-route
  namespace: neuralbank-stack
  annotations:
    argocd.argoproj.io/sync-wave: "5"
spec:
  parentRefs:
    - name: neuralbank-gateway
      namespace: neuralbank-stack
  hostnames:
    - "neuralbank.apps.ocp.kw5t8.sandbox437.opentlc.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api
        - path:
            type: PathPrefix
            value: /q
      backendRefs:
        - name: neuralbank-backend-svc
          port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: neuralbank-root-route
  namespace: neuralbank-stack
  annotations:
    argocd.argoproj.io/sync-wave: "5"
spec:
  parentRefs:
    - name: neuralbank-gateway
      namespace: neuralbank-stack
  hostnames:
    - "neuralbank.apps.cluster-wjvhz.dynamic.redhatworkshops.io"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /swagger-ui
      backendRefs:
        - name: neuralbank-backend-svc
          port: 8080
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: neuralbank-frontend-svc
          port: 8080
